<resources>
    <string name="app_name">Root Checker</string>
    <string name="busy_box_installed">Busy Box Installed</string>
    <string name="root_given">Root Given</string>
    <string name="root_path">Root Path</string>
    <string name="root_available">Root Available</string>
    <string name="device_rooted">Device Rooted</string>
    <string name="your_device_is_not_rooted">Your device is not rooted</string>
    <string name="this_app_checks_if_your_device_is_rooted_or_not">This app checks if your device is rooted or not</string>
    <string name="root_checker">Root Checker</string>
</resources>