<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:padding="5dp"
                        app:srcCompat="@drawable/root_act" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/root_checker"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/this_app_checks_if_your_device_is_rooted_or_not"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/Root_Text_Desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/your_device_is_not_rooted"
                    android:textColor="#AD1457"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/device_rooted"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/Device_Rooted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/root_available"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/Device_Root_AvailableOnDevice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text=""
                        android:textColor="?attr/colorTertiary" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="2"
                        android:text="@string/root_path"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/Root_Path_textTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="2"
                        android:text="" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/root_given"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/Root_Given_DeviceText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="2"
                        android:text="@string/busy_box_installed"
                        android:textColor="?attr/colorTertiary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/busy_Box_InstalledOnDevice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:maxLines="2"
                        android:text="" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>